--- a/stylin.css
+++ b/stylin.css
@@ -1,13 +1,13 @@
-@import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500';
-@import url("proxima-nova.css");
+@import url("http://fonts.googleapis.com/css?family=Open+Sans");
+
 
 body {
-	display: none;
+	/*display: none;*/
 	background: #FAF9FA;
 	line-height: 1.55;
-	font-family: 'Proxima Nova';
+	font-family: 'Open Sans';
 	font-weight: 350;
-	font-size: 16px;
+	font-size: 14px;
 	text-align: justify;
 	color: #555;
 }
@@ -15,18 +15,7 @@ body {
 a {text-decoration: none; color: #555;}
 a:hover {color:#FFD1DC;}
 
-#copy {font-size:10px;}
-
-#sidebar {
-	color: #555;
-	position: absolute;
-		left: 12%;
-		top: 27%;
-		width: 10%;
-		height: 50%;
-	text-align: right;
-
-}
+p {font-size: 17px;}
 
 .wrapper {
 	max-width: 45em;
@@ -63,3 +52,15 @@ a:hover {color:#FFD1DC;}
 }
 
 
+#copy {font-size:10px;}
+
+#sidebar {
+	color: #555;
+	position: absolute;
+		left: 12%;
+		top: 27%;
+		width: 10%;
+		height: 50%;
+	text-align: right;
+
+}
