--- a/stylin.css
+++ b/stylin.css
@@ -1,12 +1,11 @@
-@import url(https://fonts.googleapis.com/css?family=Muli|Open%20Sans);
+@import url(https://fonts.googleapis.com/css?family=Muli:200,300|Open%20Sans:200,300);
 
-
+/* basic html */
 body {
-	/*display: none;*/
 	background: #FAF9FA;
 	line-height: 1.55;
 	font-family: 'Muli', serif;
-	font-weight: 350;
+	font-weight: 100;
 	font-size: 14px;
 	text-align: justify;
 	color: #555;
@@ -15,14 +14,19 @@ body {
 a {text-decoration: none; color: #555;}
 a:hover {color:#FFD1DC;}
 
-p {font-size: 15px;}
+p {
+	font-size: 1.5rem;
+	letter-spacing: .2px;
+}
+
+/* specific classes */
 
 .wrapper {
 	max-width: 45em;
 	padding: 3em;
-	margin-left: 25%;
+	margin-left: 17%;
 	margin-top: 4%;
-	padding-left: 50px;
+	padding-left: 0px;
 	overflow: hidden;
 }
 
@@ -51,6 +55,8 @@ p {font-size: 15px;}
 	height: 32.9%;
 }
 
+/* specific styles/sections */
+
 
 #copy {font-size:10px;}
 
@@ -62,8 +68,13 @@ p {font-size: 15px;}
 		width: 10%;
 		height: 50%;
 	text-align: right;
-
 }
+
+#links {
+	font-size: 1.3rem;
+}
+
+
 
 /* Small screens */
 @media screen and (min-width: 28.75em) {
@@ -72,7 +83,7 @@ p {font-size: 15px;}
 	}
 }
 
-/* Medium screens */
+/* Medium+ screens */
 @media screen and (min-width: 40.5em) {
 	#sidebar {
 		top: 27%;
