--- a/stylin.css
+++ b/stylin.css
@@ -6,7 +6,6 @@ body {
 	line-height: 1.55;
 	font-family: 'Muli', 'Open Sans', sans-serif;
 	font-weight: 100;
-	font-size: 14px;
 	text-align: justify;
 	color: #555;
 }
@@ -15,17 +14,23 @@ a {text-decoration: none; color: #555;}
 a:hover {color:#FFD1DC;}
 
 p {
-	font-size: 1.5rem;
+	font-size: 1.2vw;
 	letter-spacing: .2px;
+}
+
+h1 {
+	font-weight: lighter;
+	font-size: 2.1vw; 
+	line-height: 5px;
 }
 
 /* specific classes */
 
 .wrapper {
 	max-width: 450px;
-	padding: 3em;
+	padding: 7em;
 	padding-left: 0px;
-	padding-bottom: 20px;
+	padding-bottom: 50px;
 	margin-left: 17%;
 	margin-top: 4%;
 	overflow: hidden;
