--- a/stylin.css
+++ b/stylin.css
@@ -100,6 +100,16 @@ h1 {
 		font-size: 2vw;
 		letter-spacing: 0.013em;
 	}
+
+	.wrapper {
+		max-width: 450px;
+		padding: 7em;
+		padding-left: 0px;
+		padding-bottom: 50px;
+		margin-left: 17%;
+		margin-top: 4%;
+		overflow: hidden;
+	}
 } 
 
 /* Medium+ screens */
