--- a/css/style.css
+++ b/css/style.css
@@ -58,13 +58,13 @@ a:hover {color:#FFD1DC;}
 /* specific styles/sections */
 
 
-#copy {font-size:10px;}
+#copy {font-size:1vw;}
 
 #sidebar {
 	color: #555;
 	position: absolute;
 		left: 3%;
-		top: 23%;
+		top: 23.3%;
 		width: 10%;
 		height: 50%;
 	text-align: right;
@@ -113,7 +113,17 @@ a:hover {color:#FFD1DC;}
 		font-size: 2vw;
 		letter-spacing: 0.013em;
 	}
+	#copy {font-size:1vw;}
 
+	#sidebar {
+		color: #555;
+		position: absolute;
+			left: 3%;
+			top: 23.3%;
+			width: 10%;
+			height: 50%;
+		text-align: right;
+	}
 
 } 
 
