--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Muli:200,300|Open%20Sans:200,300);
 
-/* basic html */
+/* universal breakpoint */
 
 html, body {
 	background: #232741;
@@ -30,50 +30,7 @@ a:hover {color:#FFD1DC;}
 	overflow: hidden;
 }
 
-.stretch {
-    width: 100%;
-    display: inline-block;
-    font-size: 0;
-    line-height: 0;
-}
-
-.movie {
-	border-radius: 8px;
-	width: 30%;
-	height: 30%;
-}
-
-.project {
-	border-radius: 8px;
-	width: 100%;
-	height: 20%;
-}
-
-.portfolio {
-	border-radius: 8px;
-	width: 32.9%;
-	height: 32.9%;
-}
-
 /* specific styles/sections */
-
-
-#copy {font-size:1vw;}
-
-#sidebar {
-	color: #555;
-	position: absolute;
-		left: 3%;
-		top: 23.3%;
-		width: 10%;
-		height: 50%;
-	text-align: right;
-}
-
-#links {
-	font-size: 1vw;
-	letter-spacing: .2px;
-}
 
 #particles-js canvas {
     display: block;
@@ -128,7 +85,7 @@ a:hover {color:#FFD1DC;}
 } 
 
 /* Medium+ screens */
-@media screen and (min-width: 40.5em) {
+@media screen and (min-width: 50em) {
 	p {
 		font-size: 1.5vw;
 		letter-spacing: 0.013em;
@@ -143,5 +100,17 @@ a:hover {color:#FFD1DC;}
 	#links {
 		font-size: 1vw;
 		letter-spacing: 0.013em;
+	}
+
+	#copy {font-size:1vw;}
+
+	#sidebar {
+		color: #555;
+		position: absolute;
+			left: 3%;
+			top: 23.3%;
+			width: 10%;
+			height: 50%;
+		text-align: right;
 	}
 }
