--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,45 @@ a:hover {color:#FFD1DC;}
     left: 0
 }
 
+/* SMALLER screens */
+@media screen and (min-width: 20em) {
+	p {
+		letter-spacing: 0.013em;
+	}
+
+	h1 {
+		font-weight: lighter;
+		line-height: 0.313em;
+	}
+
+	.wrapper {
+		color: #FAF9FA;
+		padding: 7em;
+		padding-left: 0px;
+		padding-bottom: 3.125em;
+		margin-left: 17%;
+		margin-top: 4%;
+		overflow: hidden;
+	}
+
+	#links {
+		letter-spacing: 0.013em;
+	}
+
+	#copy {font-size:1vw;}
+
+	#sidebar {
+		color: #555;
+		position: absolute;
+			left: 3%;
+			top: 23.3%;
+			width: 10%;
+			height: 50%;
+		text-align: right;
+	}
+}
+
+
 /* small screens */
 @media screen and (min-width: 28.75em) {
 	p {
@@ -64,7 +103,7 @@ a:hover {color:#FFD1DC;}
 	}
 
 	#links {
-		font-size: 3vw;
+		font-size: 2.5vw;
 		letter-spacing: 0.013em;
 	}
 
