--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,8 @@ a:hover {color:#FFD1DC;}
 
 	.wrapper {
 		color: #FAF9FA;
+		padding: 4em;
+		padding-bottom: 3.125em;
 		margin-left: 17%;
 		margin-top: 4%;
 		overflow: hidden;
