--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ a:hover {color:#FFD1DC;}
 /* SMALLER screens */
 @media screen and (min-width: 20em) {
 	p {
+		font-size: 0.8vw;
 		letter-spacing: 0.013em;
 	}
 
@@ -53,12 +54,14 @@ a:hover {color:#FFD1DC;}
 	.wrapper {
 		color: #FAF9FA;
 		padding: 0.2em;
+		padding-bottom: 3.125em;
 		margin-left: 17%;
 		margin-top: 4%;
 		overflow: hidden;
 	}
 
 	#links {
+		font-size: 0.7vw;
 		letter-spacing: 0.013em;
 	}
 
