--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@
 /* universal breakpoint */
 
 html, body {
-	background: #232741;
+	/* background: #232741; dark blue */
+	background: #212121; /* dark gray */
 	line-height: 1.55;
 	font-family: 'Muli', sans-serif;
 	font-weight: 100;
