--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,39 @@ a:hover {color:#FFD1DC;}
 }
 
 /* large screens */
-@media screen and (min-width: 40.5em) {
+@media screen and (min-width: 40.5em) and (max-width: 64em) {
+	p {
+		font-size: 1.5vw;
+		letter-spacing: 0.013em;
+	}
+
+	h1 {
+		font-weight: lighter;
+		font-size: 3vw; 
+		line-height: 0.313em;
+	}
+
+	.wrapper {
+		color: #FAF9FA;
+		max-width: 31.25em;
+		padding: 7em;
+		padding-left: 0px;
+		padding-bottom: 3.125em;
+		margin-left: 17%;
+		margin-top: 4%;
+		overflow: hidden;
+	}
+
+	#links {
+		font-size: 1vw;
+		letter-spacing: 0.013em;
+	}
+
+	#copy {font-size:1vw;}
+}
+
+/* larger screens */
+@media screen and (min-width: 48em) {
 	p {
 		font-size: 1.5vw;
 		letter-spacing: 0.013em;
