--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,41 @@ a:hover {color:#FFD1DC;}
 	}
 }
 
+/* iphone 6/7+ */
+@media screen and (min-width: 25em) and (max-width: 39.250em) {
+	p {
+		font-size: 4vw;
+		letter-spacing: 0.013em;
+	}
+
+	h1 {
+		font-weight: lighter;
+		font-size: 5vw; 
+		line-height: 0.313em;
+	}
+
+	.wrapper {
+		color: #FAF9FA;
+		max-width: 31.25em;
+		padding: 7em;
+		padding-left: 0px;
+		padding-bottom: 3.125em;
+		margin-left: 17%;
+		margin-top: 4%;
+		overflow: hidden;
+	}
+
+	#links {
+		font-size: 2.5vw;
+		letter-spacing: 0.013em;
+	}
+
+	#copy {font-size:1vw;}
+
+}
+
 /* medium screens */
-@media screen and (min-width: 25em) {
+@media screen and (min-width: 28.75em)  {
 	p {
 		font-size: 4vw;
 		letter-spacing: 0.013em;
