--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -17,8 +17,8 @@ a {
 a:hover {color:#FFD1DC;}
 
 
-/* small screens */
-@media screen and (min-width: 20em) {
+/* phone */
+@media screen and (max-width: 599px) {
 	p {
 		font-size: 4vw;
 		letter-spacing: 0.013em;
@@ -46,7 +46,7 @@ a:hover {color:#FFD1DC;}
 		padding-left: 0px;
 		padding-bottom: 3.125em;
         margin-top: auto;
-		margin-left: 36%;
+		margin-left: 30%;
 		overflow: hidden;
 	}
 
@@ -58,49 +58,8 @@ a:hover {color:#FFD1DC;}
 	#copy {font-size:1vw;}
 }
 
-/* iphone 6/7+ */
-@media screen and (min-width: 25em) and (max-width: 39.250em) {
-	p {
-		font-size: 4vw;
-		letter-spacing: 0.013em;
-        width: 15em;
-	}
-
-	h1 {
-		font-weight: lighter;
-		font-size: 7.5vw; 
-		line-height: 0em;
-        width: 24em;
-	}
-
-    img {
-        max-width: 200%;
-        max-height: 100%;
-        height: auto;
-        width: auto;
-    }
-
-	.wrapper {
-		color: #FDFDFD;
-		max-width: 35em;
-		padding: 7em;
-		padding-left: 0px;
-		padding-bottom: 3.125em;
-        margin-top: auto;
-		margin-left: 36%;
-		overflow: hidden;
-	}
-
-	#links {
-		font-size: 3vw;
-		letter-spacing: 0.013em;
-	}
-
-	#copy {font-size:1vw;}
-}
-
-/* medium screens */
-@media screen and (min-width: 28.75em)  {
+/* tablet, portrait */
+@media screen and (min-width: 600px)  {
 	p {
 		font-size: 4vw;
 		letter-spacing: 0.013em;
@@ -109,7 +68,7 @@ a:hover {color:#FFD1DC;}
 
 	h1 {
 		font-weight: lighter;
-		font-size: 6.2vw; 
+		font-size: 6.0vw; 
 		line-height: 0.313em;
 	}
 
@@ -139,8 +98,8 @@ a:hover {color:#FFD1DC;}
 
 }
 
-/* large screens */
-@media screen and (min-width: 40.5em) {
+/* tablet, landscape */
+@media screen and (min-width: 900px) {
 	p {
 		font-size: 3vw;
 		letter-spacing: 0.013em;
@@ -149,7 +108,7 @@ a:hover {color:#FFD1DC;}
 
 	h1 {
 		font-weight: lighter;
-		font-size: 6.7vw; 
+		font-size: 5vw; 
 		line-height: 0.313em;
 	}
 
@@ -178,88 +137,47 @@ a:hover {color:#FFD1DC;}
 	#copy {font-size:1vw;}
 }
 
-/* larger screens (ipad) */
-@media screen and (min-width: 48em) and (max-width: 64em) {
-	p {
-		font-size: 3vw;
-		letter-spacing: 0.013em;
-		width: 20em;
-	}
-
-	h1 {
-		font-weight: lighter;
-		font-size: 6.7vw; 
-		line-height: 0.5em;
-	}
-
-	img {
-        max-width: 100%;
-        max-height: 100%;
-        height: auto;
-        width: auto;
-    }
-
-	.wrapper {
-		color: #FDFDFD;
-		max-width: 40em;
-		padding: 7em;
-		padding-left: 0px;
-		padding-bottom: 3.125em;
-		margin-left: 30%;
-		margin-top: 35%;
-		overflow: hidden;
-	}
-
-	#links {
-		font-size: 2vw;
-		letter-spacing: 0.013em;
-	}
-
-	#copy {font-size:1vw;}
-}
-
-/* ipad pro */
-@media screen and (min-width: 64em) and (max-width: 85.375em) {
-	p {
-		font-size: 3vw;
-		letter-spacing: 0.013em;
-		width: 20em;
-	}
-
-	h1 {
-		font-weight: lighter;
-		font-size: 6.7vw; 
-		line-height: 0.5em;
-	}
-
-	img {
-        max-width: 100%;
-        max-height: 100%;
-        height: auto;
-        width: auto;
-    }
-
-	.wrapper {
-		color: #FDFDFD;
-		max-width: 40em;
-		padding: 7em;
-		padding-left: 0px;
-		padding-bottom: 3.125em;
-		margin-left: 30%;
-		margin-top: 40%;
-		overflow: hidden;
-	}
-
-	#links {
-		font-size: 2vw;
-		letter-spacing: 0.013em;
-	}
-
-	#copy {font-size:1vw;}
-}
-
 /* desktop */
-@media screen and (min-width: 85.375em) {
+@media screen and (min-width: 1200px) {
+	p {
+		font-size: 1.6vw;
+		letter-spacing: 0.013em;
+		width: 20em;
+	}
+
+	h1 {
+		font-weight: lighter;
+		font-size: 3.6vw; 
+		line-height: 0.5em;
+	}
+
+	img {
+        max-width: 100%;
+        max-height: 100%;
+        height: auto;
+        width: auto;
+    }
+
+	.wrapper {
+		color: #FDFDFD;
+		max-width: 50em;
+		padding: 7em;
+		padding-left: 0px;
+		padding-bottom: 3.125em;
+		margin-left: 30%;
+		overflow: hidden;
+	}
+
+	#links {
+		font-size: 2vw;
+		letter-spacing: 0.013em;
+	}
+
+	#copy {font-size:1vw;}
+}
+
+/* desktop, big */
+@media screen and (min-width: 1800px) {
 	p {
 		font-size: 1.5vw;
 		letter-spacing: 0.013em;
