--- a/src/layouts/sidebar.scss
+++ b/src/layouts/sidebar.scss
@@ -66,7 +66,7 @@
 @media screen and (min-width: 900px) {
     .sidebar {
         background: #1A1A1A;
-        line-height: 1.55;
+        line-height: 1.55zz;
         margin-left: 2%;
         margin-top: 33%;
         position: fixed;
