--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -56,6 +56,15 @@ a:hover {color:#FFD1DC;}
 		overflow: hidden;
 	}
 
+	.wrapper-img {
+		max-width: 50em;
+		padding: 3em;
+		padding-left: 0px;
+		margin-left: 10%;
+		margin-top: 0%;
+		overflow: hidden;
+	}
+
 	#links {
 		font-size: 3vw;
 		letter-spacing: 0.013em;
@@ -97,6 +106,15 @@ a:hover {color:#FFD1DC;}
 		overflow: hidden;
 	}
 
+	.wrapper-img {
+		max-width: 50em;
+		padding: 3em;
+		padding-left: 0px;
+        margin-top: 0%;
+		margin-left: 18%;
+		overflow: hidden;
+	}
+
 	#links {
 		font-size: 2.5vw;
 		letter-spacing: 0.013em;
@@ -129,6 +147,15 @@ a:hover {color:#FFD1DC;}
     }
 
 	.wrapper {
+		max-width: 50em;
+		padding: 3em;
+		padding-left: 0px;
+		margin-left: 12%;
+        margin-top: 0%;
+		overflow: hidden;
+	}
+
+	.wrapper-img {
 		max-width: 50em;
 		padding: 3em;
 		padding-left: 0px;
@@ -226,6 +253,14 @@ a:hover {color:#FFD1DC;}
 		overflow: hidden;
 	}
 
+	.wrapper-img {
+		max-width: 50em;
+		padding: 3em;
+		padding-left: 0px;
+		margin-left: 10%;
+		margin-top: 0%;
+		overflow: hidden;
+	}
 	#links {
 		font-size: 2vw;
 		letter-spacing: 0.013em;
