--- a/src/layouts/sidebar.scss
+++ b/src/layouts/sidebar.scss
@@ -27,13 +27,13 @@
         }
 
         ul {
-            line-height: 0.15em;
+            line-height: 0.2em;
             margin: 5%;
             padding: 5%;
             li {
                 list-style-type: none;
                 a {
-                    line-height: 0.5em;
+                    line-height: 0.6em;
                     font-weight: 100;
                     font-size: 5.3vw;
                     text-decoration: none;
@@ -122,7 +122,7 @@
             padding: 2%;
             li {
                 list-style-type: none;
-                margin-left: 1px;
+                margin-left: -2%;
                 a {
                     font-size: 4.5vw;
                     text-decoration: none;
